tests/baselines/reference/missingTypeArguments2.errors.txt
==== tests/cases/compiler/missingTypeArguments2.ts (4 errors) ====
    class A<T> { }
    
    var x: () => A;
                 ~
!!! error TS2173: Generic type references must include all type arguments.
    (a: A) => { };
        ~
!!! error TS2173: Generic type references must include all type arguments.
    var y: A<A>;
             ~
!!! error TS2173: Generic type references must include all type arguments.
    (): A => null;
        ~
!!! error TS2173: Generic type references must include all type arguments.